Fixed collapse button on workbench.

--- a/biodig/web/static_v2/css/workbench.css
+++ b/biodig/web/static_v2/css/workbench.css
@@ -67,7 +67,7 @@
 	display: inline-block;
 }
 
-.collapse {
+.collapse-button {
 	padding: 3px 5px 3px 8px;
 }
 
@@ -210,104 +210,6 @@
 
 #minMaxNav img {
 	width: 20px;
-}
-
-#tag-group-info-master {
-	display: none;
-}
-
-.tag-group-info-right {
-	border: 1px solid #CCCCCC;
-    display: inline-block;
-    float: right;
-    height: 430px;
-    margin-right: 15px;
-    padding: 15px;
-    width: 485px;
-}
-
-.tag-group-info-right table {
-	width: 100%;
-}
-
-.tag-group-info-right table tbody tr td {
-	padding: 20px 5px;
-	font-size: 17px;
-}
-
-.tag-group-info-left {
-	display: inline-block;
-	width: 395px;
-	padding: 0 15px 15px;
-	padding-right: 10px;
-}
-
-.tag-group-info-clone {
-	font-size: 15px;
-	font-family: Lucida Grande;
-	border-top: 1px solid #CCC;
-	border-bottom: 1px solid #CCC;
-	height: 475px;
-    padding-bottom: 70px;
-    padding-top: 15px;
-}
-
-.tag-group-info-title {
-	border-bottom: 1px solid #CCCCCC;
-    font-size: 24px;
-    text-align: center;
-}
-
-.tag-group-info-image-container {
-	width: 350px;
-	height: 350px;
-	margin: 0 auto;
-	padding: 10px;
-	border: 1px solid #CCC;
-}
-
-.tag-group-info-image {
-	display: block;
-    position: relative;
-}
-
-.tag-group-info-published img {
-	height: 25px;
-}
-
-.tag-group-info-published span {
-	padding-left: 5px;
-    vertical-align: bottom;
-}
-
-.tag-group-info-buttons {
-	float: right;
-    margin-right: 30px;
-    margin-top: -60px;
-}
-
-.tag-group-info-buttons button {
-	padding: 5px;
-	width: 70px;
-	height: 40px;
-	margin-left: 5px;
-}
-
-.tag-group-info-buttons button:hover {
-	cursor: pointer;
-}
-
-.tag-group-info-tags {
-	border: 1px solid #CCCCCC;
-    height: 150px;
-    margin: 10px auto 0;
-    width: 370px;
-}
-
-.tag-group-info-empty {
-	margin-top: 60px;
-    text-align: center;
-    font-size: 15px;
 }
 
 .edit-button {
